--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ FOOTER
 
 footer {
     font-size: 0.75em;
-    position: absolute;       /* FOOTER ALWAYS ON BOTTOM */
+    position: fixed;       /* FOOTER ALWAYS ON BOTTOM */
     right: 0;
     bottom: 0;
     left: 0;
