--- a/css/main.css
+++ b/css/main.css
@@ -414,5 +414,5 @@ nav a.selected, nav a.hover { /* NAVIGATION LINK WILL CHANGE COLOR ACCORDINGLY *
 }
 
 
-/* ID =  #wrapperW */
+/* ID =  #wrapperNumber */
 /* CLASS = a.selected */
